# minedex

./: .dockerignore  .gitignore  pyproject.toml
.github/workflows/: pr-tests.yml
migrations/versions/: 0f6850d66db4_add_raid_ended_at_and_cooldown.py  1a2b3c4d5e6f_add_raid_announcement_fields.py  3c3000e0934e_add_unlocked_villagers_column.py  4d4000e0934f_normalize_user_statistics.py  a1b2c3d4e5f6_add_achievements_table.py  b2c3d4e5f6a7_add_lifetime_stats_columns.py  dac6c57ab066_add_raid_tables.py  e27f92e793af_add_raid_and_contributions.py
scripts/: centralize_mob_data.py  migrate_token_ids.py
src/: bot.py  constants.py
src/achievements/: __init__.py  definitions.py
src/cogs/: achievements.py  collection.py  economy.py  help.py  raid.py  rolls.py  shop.py  shop_old.py  trade.py
src/data/: artifacts.json  balancing.json  bosses.json  items.json  mobs.json  shop.json
src/database/: achievement.py  db.py  user.py
src/services/: achievement_service.py  collection_service.py  economy_service.py  raid_service.py  roll_service.py  shop_service.py  trade_service.py
src/strategies/: base.py  focus.py  standard.py  token.py
src/utils/: boss_loader.py  item_loader.py  mob_loader.py  roll_utils.py  shop_loader.py  villager_loader.py
src/views/: claim.py  cleric_trade_confirm.py  collection_view.py  farmer_trade_confirm.py  raid_confirm.py  (+1 more)
tests/: conftest.py  test_achievement_service.py  test_collection_service.py  test_database.py  test_economy_service.py  test_raid_service.py  test_roll_service.py  test_shop_service.py  test_trade_service.py
